--- a/donacion.html
+++ b/donacion.html
@@ -282,8 +282,8 @@ max-width: 500px;
             <li class="dropdown">
                 <a href="#herramientas">Herramientas</a>
                 <div class="dropdown-content">
-                    <a href="#simulador-dream-machine">Simulador de Dream Machine</a>
-                    <a href="#tirada-tarot-3-cartas">Tirada de Tarot 3 Cartas</a>
+                    <a href="DreamMachine.html">Simulador de Dream Machine</a>
+                    <a href="3cartas.html">Tirada de Tarot 3 Cartas</a>
                     <a href="binaural.html">Generador de audios binaurales</a>
                 </div>
             </li>
