--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <!-- Update the video dropdown in the navbar -->
 <li class="dropdown">
-    <a href="videos.html">Videoteca</a>
+    <a href="#videos">Videoteca</a>
     <div class="dropdown-content">
         <a href="videos.html#featured">Videos Destacados</a>
         <a href="videos.html#audiobooks">Audiolibros</a>
@@ -44,7 +44,7 @@
     </div>
 </li>
           
-            <li><a href="apoyo.html">Dona 1USDT(Apoya este proyecto)</a></li>
+            <li><a href="apoyo.html">Dona 1USDT (Apoya el proyecto)</a></li>
         <!-- Resto de los elementos del navbar -->
     </ul>
 </nav>
